# MyChatServer

./: CMakeLists.txt  README.md  autobuild.sh
include/: public.hpp
include/server/: chatserver.hpp  chatservice.hpp
include/server/db/: db.h
include/server/model/: friendmodel.hpp  group.hpp  groupmodel.hpp  groupuser.hpp  offlinemessagemodel.hpp  user.hpp  usermodel.hpp
include/server/redis/: redis.hpp
src/: CMakeCache.txt  Makefile  cmake_install.cmake
src/client/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp
src/server/db/: db.cpp
src/server/model/: friendmodel.cpp  groupmodel.cpp  offlinemessagemodel.cpp  usermodel.cpp
src/server/redis/: redis.cpp
src/src/: Makefile  cmake_install.cmake
src/src/client/: Makefile
src/src/server/: Makefile
